data/derived/sp14/progs/unify/prog4682.ml.out
Characters 73-83:
  | n -> [] @ (n mod 10);;
              ^^^^^^^^^^
Error: This expression has type int but an expression was expected of type
         'a list
